Fixed minor layout spacing...
…for a post’s summary data in the detail view.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -205,6 +205,7 @@ $comments-red: #D43030;
 
 #summary-extra {
     display: flex;
+	justify-content: space-between;
     background-color: #333;
     font-weight: 700;
     padding: 0 10px;
